charts/sessionspaces/test-policy/pod-securitycontext-without-gid/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pod-securitycontext-without-gid
spec:
  steps:
  - try:
    - apply:
        resource:
          apiVersion: v1
          kind: Namespace
          metadata:
            name: sessionspace
            labels:
              app.kubernetes.io/managed-by: sessionspaces
    - apply:
        resource:
          apiVersion: v1
          kind: ConfigMap
          metadata:
            name: sessionspaces
            namespace: sessionspace
            labels:
              app.kubernetes.io/managed-by: sessionspaces
          data: {}
    - create:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: test-pod
            namespace: sessionspace
          spec:
            containers:
              - name: test-container
                image: docker.io/library/busybox:latest
            initContainers:
              - name: test-init-container
                image: docker.io/library/busybox:latest
    - assert:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: test-pod
            namespace: sessionspace
          spec:
            securityContext:
              runAsGroup: 36055
              runAsUser: 36055
            containers:
              - name: test-container
                image: docker.io/library/busybox:latest
                securityContext:
                  runAsGroup: 36055
                  runAsUser: 36055
                  allowPrivilegeEscalation: false
                  readOnlyRootFilesystem: true
            initContainers:
              - name: test-init-container
                image: docker.io/library/busybox:latest
                securityContext:
                  runAsGroup: 36055
                  runAsUser: 36055
                  allowPrivilegeEscalation: false
                  readOnlyRootFilesystem: true
